LPS-117857 Fix workflow steps builder alignment

--- a/modules/dxp/apps/app-builder-workflow/app-builder-workflow-web/src/main/resources/META-INF/resources/css/EditApp.scss
+++ b/modules/dxp/apps/app-builder-workflow/app-builder-workflow-web/src/main/resources/META-INF/resources/css/EditApp.scss
@@ -3,12 +3,10 @@ $navbarHeight: 120px;
 
 .app-builder-workflow-app {
 	display: flex;
-	justify-content: center;
 	margin-top: 64px;
 
 	&__builder {
 		height: calc(100vh - #{$navbarHeight});
-		margin-right: 350px;
 		max-height: calc(100vh - #{$navbarHeight});
 		overflow: auto;
 		position: fixed;
